--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
     border-radius: 10px;
     border: 3px solid transparent;
     background-clip: content-box;
-    background-color: #007AFF;
+    background-color: #007aff;
   }
 }
 
